--- a/client/src/pages/styles.css
+++ b/client/src/pages/styles.css
@@ -4,27 +4,38 @@ body {
     box-sizing: border-box;
 }
 
+* {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 
 .home-page {
     display: flex;
     justify-content: start;
     align-items: start;
+    flex-direction: column;
+
 }
 
+.nav {
+    width: 100vw;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+}
 
 .navbar-left {
     display: flex;
     width: 50%;
     height: 4rem;
     align-items: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .navbar-right {
     display: flex;
     align-items: center;
     justify-content: end;
-    width: 50%;
+    width: 50vw;
     height: 4rem;
 }
 
@@ -67,4 +78,56 @@ body {
     font-weight: bold;
     text-decoration-line: none;
     box-shadow: 0px 5px 20px #000;
+}
+
+.start-div {
+    width: 100%;
+    height: 100vh;
+    background-color: slategrey;
+}
+
+.start-header {
+    margin-left: 1rem;
+    padding: 0;
+    margin-bottom: 0.2rem;
+}
+
+.start-span {
+    margin-left: 1.2rem;
+}
+
+.gradient-span {
+    background: linear-gradient(90deg, #250AFF 60%, #F80000 80%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.gradient-img-container {
+    margin-top: 1rem;
+    width: 80%;
+    margin-left: -1.5rem;
+    background: linear-gradient(180deg, #250AFF 60%, #F80000 80%);
+    border-radius: 1rem;
+}
+
+.laptop {
+    width: 99.2%;
+    height: 100%;
+    padding-top: 0.5%;
+    opacity: 100%;
+    border-radius: 1rem;
+}
+
+.second-span-container {
+    width: 100%;
+    background-color: slateblue;
+    height: 10rem;
+    display: flex;
+    justify-content: end;
+    margin-top: 1rem;
+}
+
+.second-span {
+    padding-right: 1rem;
+    text-align: right;
 }
